@@ -1,3 +1,7 @@
+2002-12-03  Gary Thomas  <gthomas@ecoscentric.com>
+
+	* src/main.c: Export version string via virtual vector table.
+
 2002-11-05  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* src/io.c (_rb_gets_preloaded): Null terminate when buffer full.
